# esp32-nn-performance

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-host.txt  run_esp32.sh
benchmark/: CMakeLists.txt  run_benchmark.sh  sdkconfig  sdkconfig.defaults
benchmark/main/: CMakeLists.txt  app_main.cpp  hello_test.cpp  idf_component.yml  model_config.h
convert/: Dockerfile  Dockerfile.esp-ppq  check_onnx_acc.py  convert_models.py  fix_eff_only.py  fix_mcu_only.py  fix_mv3_only.py  fix_onnx.py  pyproject.toml  quantize_eff_only.py  quantize_espdl.py  quantize_mcu_only.py  quantize_mv3_hpre.py  quantize_mv3_int8.py  quantize_mv3_int8_fixed.py  quantize_mv3_only.py  quantize_mv3_prod.py  quantize_sq_mcu.py  verify_accuracy.py  verify_mv3_int8fixed.py
espdl_bench/: CMakeLists.txt  bench.sh  bench_all.sh  bench_all_int8.sh  bench_eff.sh  bench_mv3int8.sh  measure_power_ppk2.py  partitions.csv  sdkconfig  sdkconfig.defaults
espdl_bench/main/: CMakeLists.txt  app_main.cpp  app_main_bench.cpp.bak  app_main_eurosat.cpp.bak  eurosat_category_name.hpp  eurosat_cls_postprocessor.cpp  eurosat_cls_postprocessor.hpp  idf_component.yml  model_config.h  test_image.h
project/: sdkconfig  sdkconfig.defaults.esp32s3
project/main/: CMakeLists.txt  app_main.cpp  idf_component.yml
results/: bench_results.csv  power_efficientnet_int8.csv  power_mcunetv1_int8.csv  power_mobilenetv3_int8.csv  power_squeezenet_int8.csv
